<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/home"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/treatmentFragment"
        android:icon="@drawable/health"
        android:title="@string/nav_treatment" />

    <item
        android:id="@+id/healthFragment"
        android:icon="@drawable/heart"
        android:title="@string/nav_health" />

    <item
        android:id="@+id/alertsFragment"
        android:icon="@drawable/alertt"
        android:title="@string/nav_alerts" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings"
        android:title="@string/nav_settings" />
</menu>
