<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.radix.health.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/treatmentFragment"
        android:name="com.radix.health.ui.treatment.TreatmentFragment"
        android:label="@string/nav_treatment" />

    <fragment
        android:id="@+id/healthFragment"
        android:name="com.radix.health.ui.health.HealthFragment"
        android:label="@string/nav_health" />

    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.radix.health.ui.alerts.AlertsFragment"
        android:label="@string/nav_alerts" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.radix.health.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
